--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: recipe_meal_planner
-description: A Flutter recipe and meal planning app with SQLite and sharing features.
+description: A Flutter recipe and meal planning app with SQLite, image-based recipes, and sharing features.
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -13,7 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.3
   path: ^1.9.0
-  share_plus: ^12.0.1
+  share_plus: ^10.0.0
   collection: ^1.18.0
 
 dev_dependencies:
