--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: recipe_meal_planner
-description: A Flutter recipe and meal planning app with SQLite, image-based recipes, and sharing features.
+description: A Flutter recipe and meal planning app with SQLite, image-based recipes, sharing, and login capabilities.
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -15,11 +15,13 @@ dependencies:
   path: ^1.9.0
   share_plus: ^10.0.0
   collection: ^1.18.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
